fixed jump on sticky header

--- a/src/style/index.module.css
+++ b/src/style/index.module.css
@@ -21,6 +21,7 @@ body {
   font-family: Montserrat, Arial, Helvetica;
   color: #cfddf7;
   text-align: center;
+  margin: 0 8px;
 }
 
 .container {
